--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "apollo-server": "^2.18.2",
+    "graphql": "^15.3.0",
+    "mysql": "^2.18.1",
     "next": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@types/graphql": "^14.5.0",
+    "@types/mysql": "^2.15.15",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "ts-node": "^9.0.0",
     "typescript": "4.0"
   },
   "license": "MIT"
