--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@apollo/client": "^3.2.5",
     "apollo-server": "^2.18.2",
     "graphql": "^15.3.0",
     "mysql": "^2.18.1",
