--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "apollo-server": "^2.18.2",
+    "firebase": "^7.24.0",
     "graphql": "^15.3.0",
     "mysql": "^2.18.1",
     "next": "latest",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^6.9.6",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
