--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
+    "@types/react-syntax-highlighter": "^13.5.0",
+    "@types/showdown": "^1.9.3",
     "apollo-server": "^2.18.2",
     "firebase": "^7.24.0",
     "graphql": "^15.3.0",
     "mysql": "^2.18.1",
     "next": "latest",
+    "next-transpile-modules": "^4.1.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^6.9.6",
+    "react-markdown": "4.3.1",
+    "react-mde": "^11.0.0",
+    "react-syntax-highlighter": "^15.2.1",
+    "remark-gfm": "^1.0.0",
+    "showdown": "^1.9.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
