--- a/package.json
+++ b/package.json
@@ -2,26 +2,40 @@
   "name": "with-typescript",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "nodemon --watch server server/index.ts",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc"
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
-    "apollo-server": "^2.18.2",
+    "apollo-server-express": "^2.18.2",
+    "cors": "^2.8.5",
+    "dataloader": "^2.0.0",
+    "express": "^4.17.1",
     "graphql": "^15.3.0",
-    "mysql": "^2.18.1",
     "next": "latest",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-hook-form": "^6.9.6",
+    "sequelize": "^6.3.5",
+    "sqlite3": "^5.0.0",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
+    "@types/express": "^4.17.8",
     "@types/graphql": "^14.5.0",
     "@types/mysql": "^2.15.15",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/sqlite3": "^3.1.6",
+    "@types/styled-components": "^5.1.4",
+    "babel-plugin-styled-components": "^1.11.1",
+    "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "4.0"
   },
