--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "@types/express": "^4.17.8",
     "@types/graphql": "^14.5.0",
     "@types/mysql": "^2.15.15",
     "@types/node": "^12.12.21",
