--- a/server/sequelize/config.json
+++ b/server/sequelize/config.json
@@ -2,7 +2,10 @@
   "development": {
     "dialect": "sqlite",
     "storage": "./database.sqlite",
-    "logging": false
+    "logging": false,
+    "define": {
+      "timestamps": false
+    }
   },
   "test": {
     "dialect": "sqlite",
