--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/react-syntax-highlighter": "^13.5.0",
     "@types/showdown": "^1.9.3",
     "apollo-server-express": "^2.18.2",
+    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dataloader": "^2.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^7.24.0",
     "graphql": "^15.3.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "latest",
     "next-transpile-modules": "^4.1.0",
     "react": "^16.12.0",
@@ -35,8 +38,10 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mysql": "^2.15.15",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
