--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "firebase": "^7.24.0",
     "graphql": "^15.3.0",
+    "graphql-resolvers": "^0.4.2",
     "jsonwebtoken": "^8.5.1",
     "next": "latest",
     "next-transpile-modules": "^4.1.0",
@@ -41,6 +42,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/graphql": "^14.5.0",
+    "@types/graphql-resolvers": "^0.3.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mysql": "^2.15.15",
     "@types/node": "^12.12.21",
