--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "latest",
     "next-transpile-modules": "^4.1.0",
     "react": "^16.12.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-hook-form": "^6.9.6",
     "react-markdown": "4.3.1",
