--- a/package.json
+++ b/package.json
@@ -40,19 +40,24 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "@testing-library/react": "^11.1.1",
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/graphql": "^14.5.0",
     "@types/graphql-resolvers": "^0.3.0",
+    "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mysql": "^2.15.15",
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/react-test-renderer": "^16.9.3",
     "@types/sqlite3": "^3.1.6",
     "@types/styled-components": "^5.1.4",
     "babel-plugin-styled-components": "^1.11.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
+    "react-test-renderer": "^17.0.1",
     "ts-node": "^9.0.0",
     "typescript": "4.0"
   },
