editのルーティ改善

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ FIREBASE_MESSEGING_SENDER_ID="560441602352"
 FIREBASE_APP_ID="1:560441602352:web:95fd8b85eb198f1962d8f5"
 FIREBASE_MEASUREMENT_ID="G-M0024W26MH"
 JWT_SECRET="your_jwt_secret_phrase"
-JWT_EXPIRES_IN="1m"
+JWT_EXPIRES_IN="24h"
