--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@apollo/client": "^3.2.5",
     "@types/react-syntax-highlighter": "^13.5.0",
     "@types/showdown": "^1.9.3",
+    "apollo-fetch": "^0.7.0",
     "apollo-server-express": "^2.18.2",
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dataloader": "^2.0.0",
