不必要なファイルなど削除

--- a/.env
+++ b/.env
@@ -1,10 +1,3 @@
-FIREBASE_API_KEY="AIzaSyChcGEK9ZZkD4HHHIV-w4uciR3n_uKb70k"
-FIREBASE_AUTH_DOMAIN="proshare-46a04.firebaseapp.com"
-FIREBASE_DATABASE_URL="https://proshare-46a04.firebaseio.com"
-FIREBASE_PROJECT_ID="proshare-46a04"
-FIREBASE_STORAGE_BUCKET="proshare-46a04.appspot.com"
-FIREBASE_MESSEGING_SENDER_ID="560441602352"
-FIREBASE_APP_ID="1:560441602352:web:95fd8b85eb198f1962d8f5"
-FIREBASE_MEASUREMENT_ID="G-M0024W26MH"
+NODE_ENV="development"
 JWT_SECRET="your_jwt_secret_phrase"
 JWT_EXPIRES_IN="24h"
