--- a/package.json
+++ b/package.json
@@ -9,36 +9,6 @@
   },
   "dependencies": {
     "@apollo/client": "^3.2.5",
-    "@types/react-syntax-highlighter": "^13.5.0",
-    "@types/showdown": "^1.9.3",
-    "apollo-fetch": "^0.7.0",
-    "apollo-server-express": "^2.18.2",
-    "axios": "^0.21.0",
-    "bcrypt": "^5.0.0",
-    "cors": "^2.8.5",
-    "dataloader": "^2.0.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "firebase": "^7.24.0",
-    "graphql": "^15.3.0",
-    "graphql-resolvers": "^0.4.2",
-    "jsonwebtoken": "^8.5.1",
-    "next": "latest",
-    "next-transpile-modules": "^4.1.0",
-    "react": "^16.12.0",
-    "react-cookie": "^4.0.3",
-    "react-dom": "^16.12.0",
-    "react-hook-form": "^6.9.6",
-    "react-markdown": "4.3.1",
-    "react-mde": "^11.0.0",
-    "react-syntax-highlighter": "^15.2.1",
-    "remark-gfm": "^1.0.0",
-    "sequelize": "^6.3.5",
-    "showdown": "^1.9.1",
-    "sqlite3": "^5.0.0",
-    "styled-components": "^5.2.0"
-  },
-  "devDependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
@@ -55,17 +25,46 @@
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/react-syntax-highlighter": "^13.5.0",
+    "@types/showdown": "^1.9.3",
     "@types/sqlite3": "^3.1.6",
     "@types/styled-components": "^5.1.4",
+    "apollo-fetch": "^0.7.0",
+    "apollo-server-express": "^2.18.2",
+    "axios": "^0.21.0",
     "babel-plugin-styled-components": "^1.11.1",
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.6",
-    "react-test-renderer": "^17.0.1",
-    "ts-node": "^9.0.0",
-    "typescript": "4.0",
+    "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
+    "dataloader": "^2.0.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "firebase": "^7.24.0",
+    "graphql": "^15.3.0",
+    "graphql-resolvers": "^0.4.2",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.5.1",
-    "prettier": "^2.2.0"
+    "next": "latest",
+    "next-transpile-modules": "^4.1.0",
+    "nodemon": "^2.0.6",
+    "prettier": "^2.2.0",
+    "react": "^16.12.0",
+    "react-cookie": "^4.0.3",
+    "react-dom": "^16.12.0",
+    "react-hook-form": "^6.9.6",
+    "react-markdown": "4.3.1",
+    "react-mde": "^11.0.0",
+    "react-syntax-highlighter": "^15.2.1",
+    "react-test-renderer": "^17.0.1",
+    "remark-gfm": "^1.0.0",
+    "sequelize": "^6.3.5",
+    "showdown": "^1.9.1",
+    "sqlite3": "^5.0.0",
+    "styled-components": "^5.2.0",
+    "ts-node": "^9.0.0",
+    "typescript": "4.0"
+
   },
   "license": "MIT",
   "lint-staged": {
