--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-typescript",
+  "name": "Agora",
   "version": "1.0.0",
   "scripts": {
     "dev": "nodemon --watch server server/index.ts",
@@ -12,17 +12,10 @@
     "@types/react-syntax-highlighter": "^13.5.0",
     "@types/showdown": "^1.9.3",
     "apollo-fetch": "^0.7.0",
-    "apollo-server-express": "^2.18.2",
     "axios": "^0.21.0",
-    "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
-    "dataloader": "^2.0.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
     "firebase": "^7.24.0",
     "graphql": "^15.3.0",
-    "graphql-resolvers": "^0.4.2",
-    "jsonwebtoken": "^8.5.1",
     "next": "latest",
     "next-transpile-modules": "^4.1.0",
     "react": "^16.12.0",
@@ -35,7 +28,6 @@
     "remark-gfm": "^1.0.0",
     "sequelize": "^6.3.5",
     "showdown": "^1.9.1",
-    "sqlite3": "^5.0.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
@@ -43,23 +35,17 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
     "@testing-library/react": "^11.1.1",
-    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.8",
     "@types/graphql": "^14.5.0",
-    "@types/graphql-resolvers": "^0.3.0",
     "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^12.12.21",
-    "@types/nodemon": "^1.19.0",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
     "@types/react-test-renderer": "^16.9.3",
-    "@types/sqlite3": "^3.1.6",
     "@types/styled-components": "^5.1.4",
     "babel-plugin-styled-components": "^1.11.1",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.6",
     "react-test-renderer": "^17.0.1",
     "ts-node": "^9.0.0",
     "typescript": "4.0",
